# progetto_os_2020_2021

./: .gitignore  CMakeLists.txt  LICENSE  README.md
InputFiles/: F7.csv
sistemi_operativi/MentOS/: Makefile  cmake_install.cmake
sistemi_operativi/system_call/: CMakeCache.txt  CMakeLists.txt  Makefile  R1.c  R2.c  R3.c  S1.c  S2.c  S3.c  cmake_install.cmake  defines.c  defines.h  fifo.c  fifo.h  files.c  files.h  hackler.c  message_queue.c  message_queue.h  pipe.c  pipe.h  receiverManager  receiver_manager  receiver_manager.c  semaphore.c  semaphore.h  senderManager  sender_manager  sender_manager.c  shared_memory.c  shared_memory.h
sistemi_operativi/system_call/InputFiles/: F0.csv  F7.csv
sistemi_operativi/system_call/OutputFiles/: F2.csv  F8.csv
sistemi_operativi/system_call/src/: Makefile  R1.c  R2.c  R3.c  S1.c  S2.c  S3.c  defines.c  defines.h  hackler.c  pipe.c  receiver_manager.c  sender_manager.c
src/sistemi_operativi/system_call/: defines.h  hackler.c
src/sistemi_operativi/system_call/OutputFiles/: F1.csv  F8.csv  F9.csv
src/sistemi_operativi/system_call/src/: fifo.c  pipe.h
